arkts_static_test/06_Contexts_Conversions/ets_cases/6.3.1_Numeric_Conversions_for_Relational_and_Equality_Operands/compile-fail/CON_06_03_01_013_FAIL_STRING_INT_RELATIONAL.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id CON_06_03_01_013_FAIL_STRING_INT_RELATIONAL
 * @expect compile-fail
 * @section 6.3.1
 * @design 关系运算符: string < int, string 非数值类型，应编译失败
 * @note 反向用例：非数值类型用于关系运算符应按语义规则编译失败
 */
function testStringIntRelationalFail(): void {
  let a: string = "hello"
  let b: int = 5
  let r: boolean = a < b
}
